[gd_scene load_steps=6 format=2]

[ext_resource path="res://fireball.gd" type="Script" id=1]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = -32.0
angular_velocity = 5.38
angular_velocity_random = 1.0
orbit_velocity = -3.0
orbit_velocity_random = 1.0
tangential_accel = 50.0
scale = 2.0
scale_random = 1.0
color = Color( 1, 0.498039, 0.243137, 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = -32.0
angular_velocity = 5.38
angular_velocity_random = 1.0
orbit_velocity = -3.0
orbit_velocity_random = 1.0
tangential_accel = 50.0
scale = 2.0
scale_random = 1.0
color = Color( 1, 0.498039, 0.243137, 1 )
hue_variation = 0.12
hue_variation_random = 0.21

[sub_resource type="CircleShape2D" id=2]
radius = 15.6058

[sub_resource type="CircleShape2D" id=4]
radius = 5.93037

[node name="fireball" type="Node2D" groups=[
"baddies",
]]
scale = Vector2( 3, 3 )
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 100
process_material = SubResource( 1 )

[node name="Particles2D2" type="Particles2D" parent="."]
amount = 100
process_material = SubResource( 3 )

[node name="hit_box" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
shape = SubResource( 2 )

[node name="damage_radius" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 48

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_radius"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="area_entered" from="damage_radius" to="." method="_on_damage_radius_area_entered"]
[connection signal="body_entered" from="damage_radius" to="." method="_on_damage_radius_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
